@@ -1,3 +1,8 @@
+2003-04-08  Jean-Louis Martineau <martineau@iro.umontreal.ca>
+
+	* client-src/client_util.c (add_include): If include contain 2 '/' then
+	  use at asis, don't try to match it.
+
 2003-04-07  Jean-Louis Martineau <martineau@iro.umontreal.ca>
 
 	* server-src/changer.h (changer_label): Return an int.
